Started work on index.less and index.html. Added a font family and color into two different variables.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>My Resume</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  <title>My Resume</title>
 </head>
+<body>
+  
+</body>
+</html>
 
 <body>
+
+  <div class="navbar"><nav>
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Portfolio</a></li>
+      <li><a href="">Comtact</a></li>
+    </ul>
+  </nav></div>
+
   <h1>My Resume</h1>
 </body>
 </html>
