Added more in index.less, defined and styles the header content. Added a border to make it look better.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
       <li><a href="">Comtact</a></li>
     </ul>
   </nav></div>
-
-  <h1>My Resume</h1>
+  <header class="mainheader">
+    <div class="mainheadercontent">
+    <div class="headerimage">
+      <img src="https://images.unsplash.com/photo-1510751007277-36932aac9ebd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=677&q=80" alt="Woman typing on Macbook laptop">
+    </div>
+    <h1>Emma Atanasov - Aspiring Full Stack Developer</h1><br>
+    <h3>I like development and programming.</h3><br>
+    <div class="border"></div>
+    <div class = "headercontent"><br>
+      <p>I am enthusiastic about development, programimng, and technology.</p><br>
+      <p>I am still studying at Lambda School. Watch this space.</p>
+    </div>
+  </div>
+</header>
 </body>
 </html>
