Finished the header, working on the second section

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
   <div class="navbar"><nav>
     <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#header">About</a></li>
       <li><a href="">Portfolio</a></li>
-      <li><a href="">Comtact</a></li>
+      <li><a href="">Contact</a></li>
     </ul>
   </nav></div>
-  <header class="mainheader">
+  <header id="header"class="mainheader">
     <div class="mainheadercontent">
     <div class="headerimage">
       <img src="https://images.unsplash.com/photo-1510751007277-36932aac9ebd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=677&q=80" alt="Woman typing on Macbook laptop">
-    </div>
+    </div> <br>
     <h1>Emma Atanasov - Aspiring Full Stack Developer</h1><br>
     <h3>I like development and programming.</h3><br>
     <div class="border"></div>
@@ -34,7 +34,23 @@
       <p>I am enthusiastic about development, programimng, and technology.</p><br>
       <p>I am still studying at Lambda School. Watch this space.</p>
     </div>
+    <div class="headercontact">
+      <p>Contact me!</p>
+    </div>
   </div>
 </header>
+<section class="topcontent">
+  <div class="skills">
+    <h2>Skills</h2>
+    <p>Ever since I was young, I've loved computers and working with them.</p>
+    <p>I've been programming on and off for over ten years. So far, I'm at least adequate in...</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>Linux and Windows</li>
+    </ul>
+  </div>
+</section>
 </body>
 </html>
