Finished with the work history and portfolio section of the site.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="#header">About</a></li>
-      <li><a href="">Portfolio</a></li>
-      <li><a href="">Contact</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav></div>
   <header id="header"class="mainheader">
@@ -39,17 +39,33 @@
     </div>
   </div>
 </header>
-<section class="topcontent">
+<section id="portfolio"class="topcontent">
   <div class="skills">
-    <h2>Skills</h2>
-    <p>Ever since I was young, I've loved computers and working with them.</p>
-    <p>I've been programming on and off for over ten years. So far, I'm at least adequate in...</p>
+    <h2>Skills</h2> <br>
+    <p>Ever since I was young, I've loved computers and working with them.</p> <br>
+    <p>I've been programming on and off for over ten years. So far, I'm at least adequate in...</p> <br>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
       <li>Javascript</li>
       <li>Linux and Windows</li>
     </ul>
+  </div>
+  <div class="workhistory">
+    <h2>Work History</h2>
+    <h3>Fiesta Rancho Hotel and Casino</h3>
+    <p>Table Games Dealer - 1 year</p>
+  </div>
+</section>
+<section class="contact">
+  <div class="contactdiv">
+    <h2>Contact</h2> <br>
+    <address>
+      Emma Atanasov<br>
+      3570 S Las Vegas Blvd, Las Vegas, NV 89109<br>
+      (866) 227-5938<br>
+      fakeemail@gmail.com
+    </address>
   </div>
 </section>
 </body>
