Finished the site for desktop. Need to add media querys

--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
     </address>
   </div>
 </section>
+<footer>
+  <div class="copyright">
+    <p>Site by Emma Atanasov. Images taken from Unsplash.</p>
+  </div>
+</footer>
 </body>
 </html>
