--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
   <title>My Resume</title>
@@ -13,7 +13,7 @@
 </html>
 
 <body>
-
+  <div class="container">
   <div class="navbar"><nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -73,5 +73,6 @@
     <p>Site by Emma Atanasov. Images taken from Unsplash.</p>
   </div>
 </footer>
+</div>
 </body>
 </html>
