Finished with responsiveness

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   </div>
 </header>
 <section id="portfolio"class="topcontent">
+  <div class="skillsandwork">
   <div class="skills">
     <h2>Skills</h2> <br>
     <p>Ever since I was young, I've loved computers and working with them.</p> <br>
@@ -50,12 +51,7 @@
       <li>Javascript</li>
       <li>Linux and Windows</li>
     </ul>
-  </div>
-  <div class="workhistory">
-    <h2>Work History</h2>
-    <h3>Fiesta Rancho Hotel and Casino</h3>
-    <p>Table Games Dealer - 1 year</p>
-  </div>
+  </div></div>
 </section>
 <section class="contact">
   <div class="contactdiv">
