Added mixins, work history. Refactored some CSS.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
       <li>Javascript</li>
       <li>Linux and Windows</li>
     </ul>
-  </div></div>
+  </div>
+  <div class="work">
+    <h2>Work</h2><br>
+    <h3>Fiesta Rancho Hotel and Casino</h3>
+    <p>Table Games Dealer - 1 Year</p>
+  </div>
+</div>
 </section>
 <section class="contact">
   <div class="contactdiv">
